--- a/bunpou.html
+++ b/bunpou.html
@@ -5,13 +5,17 @@
   <link rel="icon" href="./logo/ssr_logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>日本語オンラインテスト | 文法</title>
-  <link rel="stylesheet" href="./style/style.css" />
+<link rel="stylesheet" href="./style/style.css" />
 </head>
 <body>
 <header>
   <div class="header">
     <h1 id="test-title" class="test-title">日本語テスト： 文法</h1>
-    <button id="toggle-theme">☀️</button>
+    <div class="header-actions">
+      <a class="pill-link" href="index.html">ホーム</a>
+      <a class="pill-link" href="mypage.html">My Page</a>
+      <button id="toggle-theme">☀️</button>
+    </div>
   </div>
   <div class="bottom-bar">
     <span id="timer">⏱ 00:00</span>
@@ -23,14 +27,24 @@
 </header>
 
 <div class="container">
+  <div class="page-intro">
+    <p class="muted">テスト終了後、正解は緑、選択した間違いは赤で表示されます。すべての履歴は My Page に保存されます。</p>
+  </div>
   <main id="questions-container"></main>
   <form id="quiz-form"></form>
   <div id="result"></div>
   <div id="answers-review"></div>
   <div class="retake-row hidden" id="post-actions">
     <button id="retake-test" class="secondary">もう一度受ける</button>
+    <button id="view-stats-btn" class="btn ghost">My Page</button>
   </div>
 </div>
+
+<footer id="live-footer" class="live-footer">
+  <div>✅ <span id="live-correct">0</span></div>
+  <div>❌ <span id="live-incorrect">0</span></div>
+  <div>⏳ <span id="live-remaining">0</span></div>
+</footer>
 
 <!-- ✅ Модальное окно: настройка теста -->
 <div id="start-settings-modal" class="modal-overlay">
