--- a/index.html
+++ b/index.html
@@ -51,30 +51,24 @@
       <article class="level-card">
         <h3>⊶ N3レベル ⊷</h3>
         <small>Asosiy tayyorgarlikni shu yerdan boshlang</small>
-        <div class="select-group">
-          <select onchange="if(this.value) window.location.href=this.value;">
-            <option value="">Test turini tanlang</option>
-            <option value='goi.html?subject=文字・語彙'>文字・語彙テスト</option>
-            <option value='bunpou.html?subject=文法'>文法テスト</option>
-            <option value='hoshi_mondai.html?subject=星問題'>星問題テスト</option>
-            <option value="dokkai.html">読解テスト</option>
-            <option value="shikenIndex.html">試験テスト</option>
-          </select>
+        <div class="link-list">
+          <a class="list-item" href="goi.html?subject=文字・語彙">文字・語彙テスト</a>
+          <a class="list-item" href="bunpou.html?subject=文法">文法テスト</a>
+          <a class="list-item" href="hoshi_mondai.html?subject=星問題">星問題テスト</a>
+          <a class="list-item" href="dokkai.html">読解テスト</a>
+          <a class="list-item" href="shikenIndex.html">試験テスト</a>
         </div>
       </article>
 
       <article class="level-card">
         <h3>⊶ N2レベル ⊷</h3>
         <small>Murakkab savollar va vaqt boshqaruvi</small>
-        <div class="select-group">
-          <select onchange="if(this.value) window.location.href=this.value;">
-            <option value="">Test turini tanlang</option>
-            <option value='n2goi.html?subject=文字・語彙'>文字・語彙テスト</option>
-            <option value='n2bunpou.html?subject=文法'>文法テスト</option>
-            <option value='n2hoshi_mondai.html?subject=星問題'>星問題テスト</option>
-            <option value="n2dokkai.html">読解テスト</option>
-            <option value="n2shikenindex.html">試験テスト</option>
-          </select>
+        <div class="link-list">
+          <a class="list-item" href="n2goi.html?subject=文字・語彙">文字・語彙テスト</a>
+          <a class="list-item" href="n2bunpou.html?subject=文法">文法テスト</a>
+          <a class="list-item" href="n2hoshi_mondai.html?subject=星問題">星問題テスト</a>
+          <a class="list-item" href="n2dokkai.html">読解テスト</a>
+          <a class="list-item" href="n2shikenindex.html">試験テスト</a>
         </div>
       </article>
     </section>
