--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="./logo/ssr_logo.jpg">
+    <link rel="apple-touch-icon" href="./logo/icon-192.png">
+    <link rel="manifest" href="./manifest.webmanifest">
+    <meta name="theme-color" content="#0f766e">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日本語の期末試験</title>
 <link rel="stylesheet" href="./style/style.css"/>
