--- a/n2shikenindex.html
+++ b/n2shikenindex.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./logo/ssr_logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>N2 試験テスト</title>
+  <title>JLPTSHIKEN | N2 試験</title>
   <link rel="stylesheet" href="./style/shikenStyle.css" />
 </head>
 <body>
   <header class="app-header">
     <div>
-      <span class="eyebrow">N2 Trial</span>
-      <h1 class="test-title">日本語の力試験</h1>
+      <span class="eyebrow">JLPTSHIKEN N2</span>
+      <h1 class="test-title">JLPTSHIKEN 試験</h1>
     </div>
     <div class="header-actions">
       <a class="pill-link" href="index.html">ホーム</a>
