--- a/shikenIndex.html
+++ b/shikenIndex.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./logo/ssr_logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>試験テスト</title>
+  <title>JLPTSHIKEN | N3 試験</title>
   <link rel="stylesheet" href="./style/shikenStyle.css" />
 </head>
 <body class="light">
 
   <header>
-    <h1 class="moving-text">日本語の力試験</h1>
+    <h1 class="moving-text">JLPTSHIKEN 試験</h1>
     <button id="themeToggle" style="margin-left: auto; margin-right: 20px; padding: 8px 12px; border: none; border-radius: 5px; cursor: pointer;">☀️</button> <!--☼-->
   </header>
     <main class="container" id="user-form" style="position: relative; min-height: 160px;">
