--- a/hoshi_mondai.html
+++ b/hoshi_mondai.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./logo/ssr_logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>日本語オンラインテスト | 星問題</title>
+  <title>JLPTSHIKEN | 星問題</title>
   <link rel="stylesheet" href="./style/style.css" />
 </head>
 <body>
 <header>
   <div class="header">
-    <h1 id="test-title" class="test-title">日本語オンラインテスト： 星問題</h1>
+    <h1 id="test-title" class="test-title">JLPTSHIKEN： 星問題</h1>
     <div class="header-actions">
       <a class="pill-link" href="index.html">ホーム</a>
       <a class="pill-link" href="mypage.html">My Page</a>
@@ -89,13 +89,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./logo/ssr_logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>日本語オンラインテスト | 星問題</title>
+  <title>JLPTSHIKEN | 星問題</title>
   <link rel="stylesheet" href="./style/style.css" />
 </head>
 <body>
 <header>
 <div class="header">
-<p><h1 id="test-title">日本語オンラインテスト： 星問題</h1></p> -->
+<p><h1 id="test-title">JLPTSHIKEN： 星問題</h1></p> -->
 <!--<button id="toggle-theme" style="margin-left: auto; margin-right: 20px; padding: 8px 12px; border: none; border-radius: 5px; cursor: pointer;">☀️</button>--> <!--!☼-->
 <!--
 </div> 
