--- a/mypage.html
+++ b/mypage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./logo/ssr_logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Page | Quiz statistikasi</title>
+  <title>JLPTSHIKEN | My Page</title>
   <link rel="stylesheet" href="./style/style.css" />
 </head>
 <body>
