--- a/n2dokkai.html
+++ b/n2dokkai.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./logo/ssr_logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>日本語オンラインテスト | 読解</title>
+  <title>JLPTSHIKEN | 読解</title>
   <link rel="stylesheet" href="./style/dStyle.css">
 </head>
 <body>
   <header>
     <div class="header">
-      <h1 class="test-title">日本語テスト： 読解</h1>
-      <button id="toggle-theme">☀️</button>
+      <h1 class="test-title">JLPTSHIKEN： 読解</h1>
+      <div class="header-actions">
+        <nav class="nav-links">
+          <a class="pill-link" href="index.html">ホーム</a>
+          <a class="pill-link" href="mypage.html">My Page</a>
+        </nav>
+        <button id="toggle-theme">☀️</button>
+      </div>
     </div>
   </header>
   <!-- Меню настроек перед началом теста -->
