--- a/n2goi.html
+++ b/n2goi.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./logo/ssr_logo.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>日本語オンラインテスト | 文字・語彙</title>
+  <title>JLPTSHIKEN | 文字・語彙</title>
 <link rel="stylesheet" href="./style/style.css" />
 </head>
 <body>
 <header>
   <div class="header">
-    <h1 id="test-title" class="test-title">日本語テスト： 文字・語彙</h1>
+    <h1 id="test-title" class="test-title">JLPTSHIKEN： 文字・語彙</h1>
     <div class="header-actions">
       <a class="pill-link" href="index.html">ホーム</a>
       <a class="pill-link" href="mypage.html">My Page</a>
