--- a/goi.html
+++ b/goi.html
@@ -7,7 +7,7 @@
   <title>JLPTSHIKEN | 文字・語彙</title>
 <link rel="stylesheet" href="./style/style.css" />
 </head>
-<body>
+<body data-level="N3">
 <header>
   <div class="header">
     <h1 id="test-title" class="test-title">JLPTSHIKEN： 文字・語彙</h1>
