--- a/hoshi_mondai.html
+++ b/hoshi_mondai.html
@@ -7,7 +7,7 @@
   <title>JLPTSHIKEN | 星問題</title>
   <link rel="stylesheet" href="./style/style.css" />
 </head>
-<body>
+<body data-level="N3">
 <header>
   <div class="header">
     <h1 id="test-title" class="test-title">JLPTSHIKEN： 星問題</h1>
