--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1>JLPTSHIKEN bilan minimal, dinamik tayyorlov</h1>
       <p>Natijalaringizni kuzating, to'g'ri javoblarni darhol ko'ring va My Page-da barcha ko'rsatkichlarni nazorat qiling.</p>
       <div class="hero-actions">
-        <a class="btn" href="n2goi.html?subject=文字・語彙">N2 tez boshlash</a>
+        <a class="btn" href="n2goi.html?subject=all">N2 tez boshlash</a>
         <a class="btn secondary" href="mypage.html">Statistikalar</a>
         <a class="btn ghost" href="n2shikenindex.html">N2 Full Test</a>
       </div>
@@ -63,6 +63,7 @@
           <a class="list-item" href="n2bunpou.html?subject=文法">文法テスト</a>
           <a class="list-item" href="n2hoshi_mondai.html?subject=星問題">星問題テスト</a>
           <a class="list-item" href="n2dokkai.html">読解テスト</a>
+          <a class="list-item" href="n2goi.html?subject=all">ALL 20問</a>
           <a class="list-item" href="n2shikenindex.html">試験テスト</a>
         </div>
       </article>
@@ -75,6 +76,7 @@
           <a class="list-item" href="bunpou.html?subject=文法">文法テスト</a>
           <a class="list-item" href="hoshi_mondai.html?subject=星問題">星問題テスト</a>
           <a class="list-item" href="dokkai.html">読解テスト</a>
+          <a class="list-item" href="goi.html?subject=all">ALL 20問</a>
           <a class="list-item" href="shikenIndex.html">試験テスト</a>
         </div>
       </article>
