--- a/n2dokkai.html
+++ b/n2dokkai.html
@@ -7,7 +7,7 @@
   <title>JLPTSHIKEN | 読解</title>
   <link rel="stylesheet" href="./style/dStyle.css">
 </head>
-<body>
+<body data-level="N2">
   <header>
     <div class="header">
       <h1 class="test-title">JLPTSHIKEN： 読解</h1>
