--- a/n2hoshi_mondai.html
+++ b/n2hoshi_mondai.html
@@ -7,7 +7,7 @@
   <title>JLPTSHIKEN | 星問題</title>
 <link rel="stylesheet" href="./style/style.css" />
 </head>
-<body>
+<body data-level="N2">
 <header>
   <div class="header">
     <h1 id="test-title" class="test-title">JLPTSHIKEN： 星問題</h1>
@@ -79,6 +79,6 @@
   </div>
 </div>
 
-<script src="./js/n2script.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
